--- a/xpage/index.xpage.template
+++ b/xpage/index.xpage.template
@@ -133,13 +133,11 @@
 
 
 	<div class="homepage_box">
-
-	    <h3>About</h3>
+	    <div class="homepage_heading">About</div>
 	    <ul>
 		<li>Shimshon Bichler teaches political economy at colleges and universities in Israel (<a href="mailto:tookie@barak.net.il">tookie@barak.net.il</a>) </li>
 		<li> Jonathan Nitzan teaches political economy at York University in Canada (<a href="mailto:nitzan@yorku.ca">nitzan@yorku.ca</a>) </li>
 	    </ul>
-
 	</div>
 
 
