--- a/xpage/index.xpage.template
+++ b/xpage/index.xpage.template
@@ -93,43 +93,47 @@
 
 	<!-- mailchimp -->
 	<div class="homepage_box">
-	    <h3>Updates</h3>
-	    <p>Sign-up to receive periodic alerts of new items:</p>
-
-	    <!-- Begin MailChimp Signup Form -->
-	    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"/>
-	    <style type="text/css">
-		#mc_embed_signup {
-		clear:left; 
-		width:100%;
-		margin-top: 3px;
-		margin-bottom: 3px;
-		}
-		#mc_embed_signup input.email { 
-		font-family: sans-serif;
-		height: 25px;
-		font-size: 95%;
-		}
-		#mc_embed_signup .button {
-		font-size: 95%;
-		height: 25px;
-		line-height: 25px;
-		}
-	    </style>
-	    <div id="mc_embed_signup">
-		<form action="//yorku.us13.list-manage.com/subscribe/post?u=bb99df23cb4f0749885ca4465&amp;id=7e3e7832fa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-		    <div id="mc_embed_signup_scroll">
-
-			<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required="required"/>
-			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="bb99df23cb4f0749885ca4465&amp;id=7e3e7832fa" tabindex="-1" value=""/></div>
-			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"/></div>
-		    </div>
-		</form>
+	    <div class="homepage_heading_panel">
+		<div class="homepage_box_heading">Updates</div>
 	    </div>
+	    <div class="homepage_box_content">
+
+		<p>Sign-up to receive periodic alerts of new items:</p>
+
+		<!-- Begin MailChimp Signup Form -->
+		<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"/>
+		<style type="text/css">
+		    #mc_embed_signup {
+		    clear:left; 
+		    width:100%;
+		    margin-top: 3px;
+		    margin-bottom: 3px;
+		    }
+		    #mc_embed_signup input.email { 
+		    font-family: sans-serif;
+		    height: 25px;
+		    font-size: 95%;
+		    }
+		    #mc_embed_signup .button {
+		    font-size: 95%;
+		    height: 25px;
+		    line-height: 25px;
+		    }
+		</style>
+		<div id="mc_embed_signup">
+		    <form action="//yorku.us13.list-manage.com/subscribe/post?u=bb99df23cb4f0749885ca4465&amp;id=7e3e7832fa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+			<div id="mc_embed_signup_scroll">
+
+			    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required="required"/>
+			    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="bb99df23cb4f0749885ca4465&amp;id=7e3e7832fa" tabindex="-1" value=""/></div>
+			    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"/></div>
+			</div>
+		    </form>
+		</div>
+	    </div>
+
 	</div>
-
-
 
 
 	<div class="homepage_box">
