--- a/xpage/index.xpage.template
+++ b/xpage/index.xpage.template
@@ -53,7 +53,7 @@
 	<!-- overview and browse -->
 	<div class="homepage_box">
 	    <div class="homepage_heading_panel">
-		<div class="homepage_box_heading">Browse</div>
+		<div class="homepage_box_heading">Browse the Bichler &amp; Archives</div>
 	    </div>
 	    <div class="homepage_box_content">
 		<div id="grid">
