--- a/xpage/index.xpage.template
+++ b/xpage/index.xpage.template
@@ -40,8 +40,9 @@
 	<div class="homepage_box">
 	    <div class="homepage_heading_panel">
 		<div class="homepage_box_heading">
-		    <img src="/images/new_doc.png" width="20px" />
 		    <a class="feed-link" href="{$config{perl_url}}/latest">What’s New</a>
+
+		    <img src="/images/new_doc.png" height="30px" style="float:right" />
 		</div>
 	    </div>
 	    <div class="homepage_box_content">
