--- a/xpage/index.xpage.template
+++ b/xpage/index.xpage.template
@@ -17,7 +17,7 @@
 
 	<div class="homepage_box">
 	    <div class="homepage_heading_panel">
-		<img src="/images/search_icon.png" height="30px" style="float:right" />
+		<img src="/images/new_doc.png" height="30px" style="float:right" />
 		<div class="homepage_box_heading">Search the Bichler &amp; Nitzan Archives</div>
 
 	    </div>
